AP-7019: Fix windows path bugs